# base-n

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust-test.yml
benches/: base32_benchmark.rs
src/: base32.rs  examples.rs  lib.rs
src/base32/: builder.rs  test.rs
